Scrubbing "excel" from common code

--- a/app.html
+++ b/app.html
@@ -1,6 +1,6 @@
-<html ng-app="excelSamplesApp">
+<html ng-app="officeJsSnippetApp">
 	<head>
-		<title>Gemini Excel API Samples</title>
+		<title>Office 2016 JavaScript API Samples</title>
 		
 		<!-- script for enabling the Monaco text editor -->
 		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="script/vs/editor/editor.main.css" />
