--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 		<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-		<script type="text/javascript" src="script/Office.Runtime.js"></script>
-		<script type="text/javascript" src="script/Excel.js"></script>
-		<script type="text/javascript" src="script/monaco.js"></script>
+		<!--<script type="text/javascript" src="script/Office.Runtime.js"></script>
+		<script type="text/javascript" src="script/Excel.js"></script>-->
+		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
 			
 		
