--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 		<title>Office 2016 JavaScript API Samples</title>
 		
 		<!-- script for enabling the Monaco text editor -->
-		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="script/vs/editor/editor.main.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="script/vs/editor/css/vs-theme.css" />
+		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="http://robmhoward.github.io/excel/script/vs/editor/editor.main.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="http://robmhoward.github.io/excel/script/vs/editor/css/vs-theme.css" />
 		<script type="text/javascript">
 			var require = {
 				baseUrl: "script"
 			};
 		</script>
-		<script type="text/javascript" src="script/vs/loader.js"></script>
-		<script type="text/javascript" src="script/vs/editor/editor.main.nls.js"></script>
-		<script type="text/javascript" src="script/vs/editor/editor.main.js"></script>
-		<script type="text/javascript" src="script/vs/languages/javascript/javascript.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/loader.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/editor/editor.main.nls.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/editor/editor.main.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/languages/javascript/javascript.js"></script>
 		
 		<script type="text/javascript">
 		    var appInsights=window.appInsights||function(config){
@@ -36,8 +36,8 @@
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 		<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-		<!--<script type="text/javascript" src="script/Office.Runtime.js"></script>
-		<script type="text/javascript" src="script/Excel.js"></script>-->
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Office.Runtime.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Excel.js"></script>
 		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
 			
