--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" type="text/css" media="screen" href="http://robmhoward.github.io/excel/script/vs/editor/css/vs-theme.css" />
 
 		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/loader.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/editor/editor.main.nls.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/editor/editor.main.js"></script>
 		<script type="text/javascript">
 			require.config({
 				baseUrl: "http://robmhoward.github.io/excel/script/"
