--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app="officeJsSnippetApp">
 	<head>
-		<title>Office 2016 JavaScript API Samples</title>
+		<title>Excel 2016 JavaScript API Snippet Explorer (Preview)</title>
 		
 		<!-- script for enabling the Monaco text editor -->
 		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="http://robmhoward.github.io/excel/script/vs/editor/editor.main.css" />
@@ -36,7 +36,7 @@
 	</head>
 	
 	<body style="padding: 0px; margin: 0px;">
-		
+
 		<div ng-view>
 		</div>
 		
