Added readme, fixed script ref

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 		<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Office.Runtime.js"></script>
 		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Excel.js"></script>
-		<script type="text/javascript" src="http://robmhoward.github.io/word/script/6007.1000/Excel.js"></script>
+		<script type="text/javascript" src="http://robmhoward.github.io/word/script/6007.1000/word.js"></script>
 		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
 			
