Update references to SSL

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 		<title>Office 2016 JavaScript API Snippet Explorer (Preview)</title>
 		
 		<!-- script for enabling the Monaco text editor -->
-		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="http://robmhoward.github.io/excel/script/vs/editor/editor.main.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="http://robmhoward.github.io/excel/script/vs/editor/css/vs-theme.css" />
+		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="https://robmhoward.github.io/excel/script/vs/editor/editor.main.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="https://robmhoward.github.io/excel/script/vs/editor/css/vs-theme.css" />
 
-		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/vs/loader.js"></script>
+		<script type="text/javascript" src="//robmhoward.github.io/excel/script/vs/loader.js"></script>
 		<script type="text/javascript">
 			require.config({
-				baseUrl: "http://robmhoward.github.io/excel/script/"
+				baseUrl: "https://robmhoward.github.io/excel/script/"
 			});
 			
 			// Before loading vs/editor/editor.main, define a global MonacoEnvironment that overwrites
@@ -40,13 +40,13 @@
 		<div ng-view>
 		</div>
 		
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-		<script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Office.Runtime.js"></script>
-		<script type="text/javascript" src="http://robmhoward.github.io/excel/script/Excel.js"></script>
-		<script type="text/javascript" src="http://robmhoward.github.io/word/script/6007.1000/word.js"></script>
+		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
+		<script type="text/javascript" src="//appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
+		<script type="text/javascript" src="//robmhoward.github.io/excel/script/Office.Runtime.js"></script>
+		<script type="text/javascript" src="//robmhoward.github.io/excel/script/Excel.js"></script>
+		<script type="text/javascript" src="//robmhoward.github.io/word/script/6007.1000/word.js"></script>
 		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
 			
