Updating dts and temporarily adding new scripts
I'll remove the scripts from this repo and change to CDN reference once
things have been pushed there

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 		<script type="text/javascript" src="//appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-		<script type="text/javascript" src="//robmhoward.github.io/excel/script/Office.Runtime.js"></script>
-		<script type="text/javascript" src="//robmhoward.github.io/excel/script/Excel.js"></script>
+		<script type="text/javascript" src="script/Office.Runtime.js"></script>
+		<script type="text/javascript" src="script/Excel.js"></script>
 		<script type="text/javascript" src="//robmhoward.github.io/word/script/6007.1000/word.js"></script>
 		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
