updated snippets for new model

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<script type="text/javascript" src="//appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
 		<script type="text/javascript" src="script/Office.Runtime.js"></script>
 		<script type="text/javascript" src="script/Excel.js"></script>
-		<script type="text/javascript" src="//robmhoward.github.io/word/script/6007.1000/word.js"></script>
+		<script type="text/javascript" src="script/word.js"></script>
 		<script type="text/javascript" src="script/codeEditor.js"></script>
 		<script type="text/javascript" src="script/app.js"></script>
 			
