--- a/index.html
+++ b/index.html
@@ -44,14 +44,11 @@
 		<script type="text/javascript" src="//code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-		<script type="text/javascript" src="//appsforoffice.microsoft.com/lib/1.1/hosted/office.js"></script>
-		<script type="text/javascript" src="script/Office.Runtime.js"></script>
-		<script type="text/javascript" src="script/Excel.js"></script>
-		<script type="text/javascript" src="script/word.js"></script>
+
 		<script type="text/javascript" src="script/codeEditor.js"></script>
-		<script type="text/javascript" src="script/app.js"></script>
-			
-		
+        <script src="https://eus-appsforoffice.edog.officeapps.live.com/afo/lib/1.1/hosted/office.js" type="text/javascript"></script>
+        <script type="text/javascript" src="script/app.js"></script>
+        
 	</body>
 	
 </html>
