Removing dependency on robmhoward.github.io

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 		<title>Office 2016 JavaScript API Snippet Explorer (Preview)</title>
 		
 		<!-- script for enabling the Monaco text editor -->
-		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="https://robmhoward.github.io/excel/script/vs/editor/editor.main.css" />
-		<link rel="stylesheet" type="text/css" media="screen" href="https://robmhoward.github.io/excel/script/vs/editor/css/vs-theme.css" />
+		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="//officesnippetide.azurewebsites.net/script/vs/editor/editor.main.css" />
+		<link rel="stylesheet" type="text/css" media="screen" href="//officesnippetide.azurewebsites.net/script/vs/editor/css/vs-theme.css" />
 
-		<script type="text/javascript" src="//robmhoward.github.io/excel/script/vs/loader.js"></script>
+		<script type="text/javascript" src="//officesnippetide.azurewebsites.net/script/vs/loader.js"></script>
 		<script type="text/javascript">
 			require.config({
-				baseUrl: "https://robmhoward.github.io/excel/script/"
+				baseUrl: "//officesnippetide.azurewebsites.net/script/"
 			});
 			
 			// Before loading vs/editor/editor.main, define a global MonacoEnvironment that overwrites
