--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-<!--Copyright (c) Microsoft. All rights reserved. Licensed under the MIT license. See full license at the bottom of this file.-->
 <html ng-app="officeJsSnippetApp">
 	<head>
 		<title>Office 2016 JavaScript API Snippet Explorer (Preview)</title>
 		
-		<!-- script for enabling the Monaco text editor -->
+		<!-- script for enabling the code text editor -->
 		<link rel="stylesheet" type="text/css" media="screen" data-name="vs/editor/editor.main" href="//officesnippetide.azurewebsites.net/script/vs/editor/editor.main.css" />
 		<link rel="stylesheet" type="text/css" media="screen" href="//officesnippetide.azurewebsites.net/script/vs/editor/css/vs-theme.css" />
 
 		<script type="text/javascript" src="//officesnippetide.azurewebsites.net/script/vs/loader.js"></script>
 		<script type="text/javascript">
 			require.config({
-				baseUrl: "//officesnippetide.azurewebsites.net/script/"
+				baseUrl: "https://robmhoward.github.io/excel/script/"
 			});
 			
 			// Before loading vs/editor/editor.main, define a global MonacoEnvironment that overwrites
@@ -52,29 +51,3 @@
 	</body>
 	
 </html>
-<!--
-OfficeJS Snippet Explorer, https://github.com/OfficeDev/office-js-snippet-explorer
-
-Copyright (c) Microsoft Corporation
-All rights reserved.
-
-MIT License:
-Permission is hereby granted, free of charge, to any person obtaining
-a copy of this software and associated documentation files (the
-"Software"), to deal in the Software without restriction, including
-without limitation the rights to use, copy, modify, merge, publish,
-distribute, sublicense, and/or sell copies of the Software, and to
-permit persons to whom the Software is furnished to do so, subject to
-the following conditions:
-
-The above copyright notice and this permission notice shall be
-included in all copies or substantial portions of the Software.
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
-EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
-MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
-NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE
-LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
-OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION
-WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
--->
