--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
 
 		<script type="text/javascript" src="script/codeEditor.js"></script>
-        <script src="https://eus-appsforoffice.edog.officeapps.live.com/afo/lib/1.1/hosted/office.js" type="text/javascript"></script>
+        <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js" type="text/javascript"></script>
         <script type="text/javascript" src="script/app.js"></script>
         
 	</body>
